fixing hamburger button visibility

--- a/style.css
+++ b/style.css
@@ -941,19 +941,17 @@ main {
     /* position: absolute; */
     display: flex;
     flex-direction: column;
-    width: 50px;
-    height: 30px;
-    background: rgba(250, 250, 250, 0.25);
-    border-radius: 20px;
+    width: 30px;
+    height: 20px;
     justify-content: center;
     align-items: center;
   }
 
   .hamburger-button .bar {
     margin-bottom: 3px;
-    height: 2px;
-    width: 18px;
-    background-color: var(--bg-white);
+    height: 3px;
+    width: 100%;
+    background-color: yellow;
   }
 
   .integration-section .card-container {
@@ -1023,7 +1021,7 @@ main {
     }
 
     to {
-      transform: rotate(45deg) translate(0px, 7px);
+      transform: rotate(45deg) translate(0px, 8px);
     }
   }
 
@@ -1045,7 +1043,7 @@ main {
     }
 
     to {
-      transform: rotate(-45deg) translate(0px, -7px);
+      transform: rotate(-45deg) translate(0px, -8px);
     }
   }
 }
